# bf

./: .gitignore  LICENSE  README.md  bf.cabal  hie.yaml
app/: Main.hs
examples/: div.bf  hello.bf  mul.bf
src/Bf/: Compiler.hs  Main.hs  Opts.hs  Syntax.hs
src/Bf/Compiler/: Combinators.hs  Emit.hs  Module.hs  Monad.hs  Runtime.hs
test/: Main.hs
test/Bf/: SyntaxSpec.hs
